tests/compile-fail/norules.rs
extern crate pomelo;
use pomelo::*;

pomelo! {
//~^ ERROR must have some rules
}

